src/App.css
body {
  margin: 0;
  padding: 0;
  background: #f5eded;
  font-size: 16px;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}
#root {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}
header {
  /* margin-top: 1em; */
  background-color: #ffffff;
  padding: 1em 0;
  text-align: center;
  color: #3e3636;
  display: flex;
  flex-direction: column;
}
header h1 {
  margin-bottom: 0;
}
header p {
  margin-top: 0;
  font-size: 1.25rem;
  color: #d72323;
}
/* nav-bar */

nav {
  padding: 0;
  margin: 0;
}
nav ul {
  list-style: none;
  justify-content: center;
  display: flex;
  flex-direction: column;
  padding: 0;
}
nav li {
  padding: 0.5em;
}
nav a {
  margin-top: 2em;
  text-decoration: none;
  color: #3e3636;
}
nav a:hover {
  color: #d72323;
}
@media (min-width: 675px) {
  header {
    flex-direction: row;
    justify-content: space-evenly;
    align-content: center;
  }
  nav {
    margin: auto 0;
  }
  nav ul {
    flex-direction: row;
  }
  nav a {
    border-radius: 10%;
    padding: 1em;
    background-color: #f5eded;
  }
  nav a:hover {
    background-color: #f64c72;
    color: #f5eded;
  }
}
.box h4 {
  font-size: 2em;
  width: fit-content;
  margin: 0 auto;
  margin-bottom: 1em;
}

/*end of nav-bar*/

/* main content*/
main {
  flex: 1;
}
.container {
  margin: 0 auto;
  padding: 1em;
  display: flex;
  width: 90%;
}
.box {
  display: flex;
  flex-direction: column;
  margin: 2em auto;
  align-content: center;
  background-color: #ffffff;
  width: 100%;
  padding: auto;
}
.container form {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.box img {
  width: 100%;
  max-width: 500px;
  margin-top: 1em;
}
.container input {
  margin-top: 2em;
  padding: 0.5em;
  display: block;
  font-size: 1rem;
}
.container button {
  margin: 0 auto;
  max-width: 300px;
  margin-top: 2em;
  font-size: 1rem;
  color: #ffffff;
  background-color: #3e3636;
  border: #3e3636 2px solid;
  margin-bottom: 1em;
}
.container button:hover {
  color: #d72323;
}
button {
  border-radius: 5%;
}
#submit-feedback-neg {
  margin-top: 1em;
  font-size: 1rem;
  background-color: #f5eded;
  color: orangered;
}
#submit-feedback-pos {
  margin-top: 1em;
  font-size: 1rem;
  background-color: #ffffcc;
  color: green;
}
/* end of main */

/* footer */
footer {
  margin-top: auto;
  /* margin-top: 2em; */
  background-color: #ffffff;
  padding: 2em;
  text-align: center;
}
.box {
  padding: 2em;
}
.blog {
  max-width: 1024px;
  width: 90%;
  margin: 0 auto;
  background-color: #2f2fa2;
  border-radius: 1%;
  margin-bottom: 2em;
  border: #f64c72 1em solid;
}

.blog-title {
  border-bottom: white 2px double;
  color: white;
  /* text-shadow: #f64c72 0 0 3px; */
  margin: 1em auto;
  width: fit-content;
  padding: 0.5em;
  font-size: 2rem;
}
.snippet {
  width: fit-content;
  margin: 0 auto;
  color: #f64c72;
  /* text-shadow: #ffffff 0 0 0.5px; */
  font-size: 1.5em;
}

.mainContent {
  width: 80%;
  margin: 1em auto;
  background-color: #97caef;
  padding: 2em;
  /* border: #242582 0.5em solid; */
  border-radius: 1%;
}

.author {
  margin: 0 auto;
  width: fit-content;
  font-size: 1.25em;
  color: aliceblue;
  border-bottom: white 2px double;
  margin-bottom: 1em;
}

